overflow issue resolve

--- a/src/styles/css/slick.scss
+++ b/src/styles/css/slick.scss
@@ -67,16 +67,16 @@
 
 @media only screen and (max-width: 600px) {
     .beauty_slider .slick-prev {
-        left: -25px !important;
+        left: -15px !important;
     }
     .beauty_slider .slick-next {
-        right: -25px !important;
+        right: -15px !important;
     }
     .service_slider .slick-prev {
-        left: -25px !important;
+        left: -15px !important;
     }
     .service_slider .slick-next {
-        right: -25px !important;
+        right: -15px !important;
     }
     .review_slider .slick-prev {
         left: -45px !important;
